fixed header propertions and aligned project text to the left

--- a/src/Header.css
+++ b/src/Header.css
@@ -25,7 +25,7 @@ header aside {
 
 @media (max-width: 512px) {
   header {
-    padding-bottom: 92px;
+    padding-bottom: 148px;
   }
 
   header aside {
