--- a/src/Project.css
+++ b/src/Project.css
@@ -17,7 +17,6 @@
   box-shadow: var(--elevation-z3);
   margin-bottom: 32px;
   margin-left: 32px;
-  text-align: center;
   text-decoration: inherit;
   transition: box-shadow .25s;
 }
@@ -48,10 +47,10 @@
 
 .Project h3::after {
   content: '';
-  width: 1.5em;
-  height: 5.5px;
+  width: 2em;
+  height: 4.5px;
   background: black;
-  margin: 24px auto;
+  margin: 24px 0;
   display: block;
 }
 
